[package]
name = "a10"
version = "0.1.0"
authors = ["John Wells"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
f3 = "0.6.1"
panic-halt = "0.2.0"

[dependencies.futures]
version = "0.1.26"
default-features = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
